<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/background_white_rounded"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true" >
                <EditText
                    android:id="@+id/entryCountryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/general_country_hint"
                    android:maxLines="1"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:background="@null"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:cursorVisible="true"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/mineShaft"
                    android:textColorHint="@color/nobel"
                    android:padding="5dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/greetingLabel"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_welcome"/>
            <TextView
                android:id="@+id/mainCountryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginTop="5dp"
                android:text="@string/general_country_form"/>
            <TextView
                android:id="@+id/lastUpdateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginTop="5dp"
                android:text="@string/general_last_update"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/totalDataLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:text="@string/general_total_data"/>
                <Button
                    android:id="@+id/refreshButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/background_curious_blue_rounded"
                    android:text="@string/general_refresh_button"
                    android:layout_gravity="right"
                    android:textAllCaps="true"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/covid_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black80"
            tools:listitem="@layout/covid_monitoring_item"/>
    </LinearLayout>
    <include layout="@layout/loading_layout"/>
</RelativeLayout>
