<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <TextView
        android:id="@+id/countryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Abbeville"
        android:textSize="26dp"
        android:textColor="@color/buttercup"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/provinceLabel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:text="US"
            android:textStyle="normal"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/buttercup"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/general_positive"
                android:textAllCaps="true"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/bitterSweet"/>
            <TextView
                android:id="@+id/positiveLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="101"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="@color/bitterSweet"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/general_death"
                android:textAllCaps="true"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/deathLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="101"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/general_recovered"
                android:textAllCaps="true"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/greenYellow"/>
            <TextView
                android:id="@+id/recoveredLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="101"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="@color/greenYellow"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>